Fix for hover state on mobile

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -166,17 +166,9 @@ div[class^='book__stats-info-'] {
 }
 .read {
 	background-color: #91c483;
-
-	&:hover {
-		background-color: #da1212;
-	}
 }
 .not-read {
 	background-color: #da1212;
-
-	&:hover {
-		background-color: #91c483;
-	}
 }
 
 .book__pop {
@@ -209,8 +201,9 @@ div[class^='book__stats-info-'] {
 		font-size: 2rem;
 	}
 	& input {
+		width: 70%;
 		display: block;
-		padding: 1.3rem;
+		padding: 1.5rem;
 		font-size: 1.5rem;
 		margin: 2rem auto;
 	}
@@ -230,6 +223,10 @@ div[class^='book__stats-info-'] {
 	border-radius: 5px;
 	width: 100%;
 	background-color: #eeeeee;
+	color: #000000;
+	padding: 1.5rem 0;
+	font-size: 2rem;
+	text-decoration: none;
 	&:hover {
 		background-color: #91c483;
 	}
@@ -237,4 +234,20 @@ div[class^='book__stats-info-'] {
 
 .center {
 	position: relative;
+}
+
+@media (hover: hover) {
+	.read:hover {
+		background-color: #da1212;
+	}
+	.not-read:hover {
+		background-color: #91c483;
+	}
+}
+
+@media (hover: none) {
+	.read:active,
+	.not-read:active {
+		color: inherit;
+	}
 }
